force-app/main/default/objects/Trigger_Action__mdt/Trigger_Action__mdt.object-meta.xml
<CustomObject>
    <description>Trigger Actions for</description>
    <label>Trigger Action</label>
    <pluralLabel>Trigger Actions</pluralLabel>
</CustomObject>