force-app/main/default/objects/Trigger_Action__mdt/fields/Apex_Class_Name__c.field-meta.xml
<CustomField>
    <fullName>Apex_Class_Name__c</fullName>
    <inlineHelpText>The name of the Apex class for this action.
The action must implement the seven20.TriggerAction interface</inlineHelpText>
    <label>Apex Class Name</label>
    <length>40</length>
    <required>true</required>
    <type>Text</type>
</CustomField>