force-app/main/default/objects/Trigger_Action__mdt/fields/Invoke_Order__c.field-meta.xml
<CustomField>
    <fullName>Invoke_Order__c</fullName>
    <inlineHelpText>The order this action will be called within the trigger context</inlineHelpText>
    <label>Invoke Order</label>
    <precision>5</precision>
    <required>true</required>
    <scale>2</scale>
    <type>Number</type>
</CustomField>