force-app/main/default/objects/Trigger_Action__mdt/fields/Is_Active__c.field-meta.xml
<CustomField>
    <fullName>Is_Active__c</fullName>
    <defaultValue>true</defaultValue>
    <inlineHelpText>Is this trigger action active?
For seven20 actions, modify this value at your own risk</inlineHelpText>
    <label>Is Active</label>
    <type>Checkbox</type>
</CustomField>