force-app/main/default/objects/Trigger_Action__mdt/fields/Namespace__c.field-meta.xml
<CustomField>
    <fullName>Namespace__c</fullName>
    <inlineHelpText>The namespace of the called trigger action (if one is present)</inlineHelpText>
    <label>Namespace</label>
    <length>15</length>
    <type>Text</type>
</CustomField>