force-app/main/default/objects/Trigger_Action__mdt/fields/Trigger_Context__c.field-meta.xml
<CustomField>
    <fullName>Trigger_Context__c</fullName>
    <inlineHelpText>What context should this action be invoked in?</inlineHelpText>
    <label>Trigger Context</label>
    <required>true</required>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>BEFORE_DELETE</fullName>
                <default>true</default>
                <label>BEFORE_DELETE</label>
            </value>
            <value>
                <fullName>BEFORE_INSERT</fullName>
            </value>
            <value>
                <fullName>BEFORE_UPDATE</fullName>
            </value>
            <value>
                <fullName>AFTER_DELETE</fullName>
            </value>
            <value>
                <fullName>AFTER_INSERT</fullName>
            </value>
            <value>
                <fullName>AFTER_UNDELETE</fullName>
            </value>
            <value>
                <fullName>AFTER_UPDATE</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>