force-app/main/default/objects/Trigger_Action__mdt/fields/Trigger_Object__c.field-meta.xml
<CustomField>
    <fullName>Trigger_Object__c</fullName>
    <label>Trigger Object</label>
    <referenceTo>EntityDefinition</referenceTo>
    <relationshipLabel>Trigger_Actions</relationshipLabel>
    <relationshipName>Trigger_Actions</relationshipName>
    <type>MetadataRelationship</type>
</CustomField>