force-app/main/default/objects/Trigger_Action__mdt/fields/Trigger_Object_Special__c.field-meta.xml
<CustomField>
    <fullName>Trigger_Object_Special__c</fullName>
    <description>Objects unsupported by Entity Definition lookups, but which can still have Triggers associated with them</description>
    <inlineHelpText>If the object type isn&apos;t available via the object lookup, it can be added here</inlineHelpText>
    <label>Trigger Object (Special)</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>EmailMessage</fullName>
                <label>Email Message</label>
            </value>
            <value>
                <fullName>Event</fullName>
            </value>
            <value>
                <fullName>Task</fullName>
            </value>
            <value>
                <fullName>User</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>