force-app/main/default/objects/Trigger_Action__mdt/validationRules/An_SObject_must_be_selected.validationRule-meta.xml
<ValidationRule>
    <fullName>An_SObject_must_be_selected</fullName>
    <active>true</active>
    <description>Enforce either the Trigger Object or Trigger Object (Special) fields have been populated</description>
    <errorConditionFormula>ISBLANK(Trigger_Object__c) &amp;&amp;  ISBLANK(TEXT(Trigger_Object_Special__c))</errorConditionFormula>
    <errorMessage>A Trigger Object must be selected</errorMessage>
</ValidationRule>