force-app/main/default/objects/Trigger_Action__mdt/validationRules/Only_One_Trigger_Object.validationRule-meta.xml
<ValidationRule>
    <fullName>Only_One_Trigger_Object</fullName>
    <active>true</active>
    <description>A record can only have Trigger Object or Trigger Object Special populated</description>
    <errorConditionFormula>NOT(ISBLANK(Trigger_Object__c)) &amp;&amp; NOT(ISBLANK(TEXT(Trigger_Object_Special__c)))</errorConditionFormula>
    <errorMessage>Only one of Trigger Object and Trigger Object (Special) can be populated</errorMessage>
</ValidationRule>