force-app/main/default/objects/Trigger_Action__mdt/listViews/All_Trigger_Actions.listView-meta.xml
<ListView>
    <fullName>All_Trigger_Actions</fullName>
    <columns>MasterLabel</columns>
    <columns>Trigger_Object__c</columns>
    <columns>Trigger_Object_Special__c</columns>
    <columns>Trigger_Context__c</columns>
    <columns>Invoke_Order__c</columns>
    <columns>Namespace__c</columns>
    <columns>Apex_Class_Name__c</columns>
    <columns>Is_Active__c</columns>
    <filterScope>Everything</filterScope>
    <label>All Trigger Actions</label>
</ListView>